# Fund-My-Cause

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_DEVOPS.md  README.md  lighthouserc.json  package-lock.json
.github/workflows/: contract-tests.yml  cost-monitoring.yml  disaster-recovery-testing.yml  multi-region-deployment.yml  performance-benchmarks.yml  security-scanning.yml  setup-logging.yml
apps/interface/: package.json
contracts/benchmarks/: Cargo.toml
contracts/benchmarks/benches/: contract_benchmarks.rs
contracts/crowdfund/: Cargo.toml
contracts/crowdfund/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/crowdfund/test_snapshots/: test_full_lifecycle_refund_path.1.json  test_full_lifecycle_success_with_platform_fee.1.json  test_pull_based_refund_model_multiple_contributors_goal_not_met.1.json
contracts/crowdfund/tests/: common.rs  integration.rs  invariants.rs
contracts/registry/: Cargo.toml
docs/: contract-invariants.md  cost-monitoring.md  disaster-recovery-runbooks.md  frontend-api.md  log-aggregation.md  memory-profiling.md  multi-region-deployment.md  performance-testing.md  security-audit-checklist.md  security-scanning.md  storage-optimization.md
e2e/: campaign-creation.spec.ts  contribution-flow.spec.ts  refund-flow.spec.ts
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
scripts/: blue-green-deploy.sh  blue-green-rollback.sh  performance-monitoring.sh  performance-test.sh  security-check.sh  test-blue-green-deployment.sh  test-performance-testing.sh
(+66 files in other folders)
