[workspace]
resolver = "2"
members = [
  "contracts/*",
]
exclude = ["contracts/benchmarks"]

[workspace.dependencies]
soroban-sdk = "25.3.0"

[workspace.dev-dependencies]
insta = { version = "1.37", features = ["redaction"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
